* Now files without read permissions can be excluded when creating the list (customizable).
* Added the ability to export individual checksums from the database to a digest file (*.ver(.json) --> *.sha1/256/512).
* Copying files and folders is now also available when browsing the file system.

Fixes and Minor Enhancements:
* Fixed display of item's zero-byte size.
* Folder Contents dialog: fixed adding the sizes of files without read permissions.
* Fixed crash when opening a database while another parsing is ongoing.

Internal changes:
* Redesigned task management system.
* Significant optimization of the Data Model creation process (x10 faster for Large lists).

Removed:
* "Colored Items" setting. Now is always on.
* Menu Setting for display the number of updatable items.

---
Veretino 0.4.5
* Improved handling of damaged and unreadable files.

---
Veretino 0.4.4
* Implemented skipping of queued items that became unavailable during the process.
* Window Title: fixed premature "✓ verified" mark when resuming the process.
* Minor UI improvements and performance optimizations.

---
Veretino 0.4.3
* Fixed a missed database save that occurred when there was unsaved data and a drag-and-drop event from the file system, or opening a folder from the menu.
* Fixed a silent crash (occurred when closing the app with a setted database) on Qt6.
* Added CMake build system.
* Improved appearance of the "About box".

---
Veretino 0.4.2
* Fixed Qt6 builds.

---
Veretino 0.4.1
* Redesigned and improved Status Bar.
* Added the ability to analyze the contents of a database by type and size, similar to how the "Folder Contents" do.
* The window title now displays some info about the database. A hint will also appear if any Mismatches are found during the verification process.

Fixes and Minor Enhancements:
* Improved keyboard operation in the Filter Creation Dialog.
* Now the process cancelation prompt disappears automatically if it is no longer relevant.